[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi-simple-cachecontrol"
version = "0.1.0"
description = "Cache-Control header management for FastAPI"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = ["fastapi"]

[project.optional-dependencies]
test = [
  "httpx",
  "pytest",
]

[project.urls]
Home = "https://github.com/attakei/fastapi-simple-cachecontrol"

[tool.flit.module]
name = "fastapi_simple_cachecontrol"

[tool.flit.sdist]
exclude = [".github", "tests"]
